# nazm-lang

./: .gitignore  Cargo.toml  README.md
docs/: 404.html  chapter_1.html  chapter_2.html  index.html  print.html  searchindex.js  searchindex.json
docs/css/: language-nazm.css
docs/js/: highlight.min.js  nazm.js
editor-support/: nazm.lang  text-x-nazm.xml
nazm-book/: book.js  book.toml  change-titles.js  highlight.js
nazm-book/css/: language-nazm.css
nazm-book/js/: book.js  change-titles.js  nazm.js  xregexp-all.js
nazm-book/mdbook-nazm/: Cargo.toml
nazm-book/mdbook-nazm/src/: lib.rs  main.rs
nazm-book/src/: SUMMARY.md  chapter_1.md  chapter_2.md  start.md
nazm-book/src/memory/: functions.md
nazm-book/src/start/: basics.md  control-flow.md  data-structuring.md
nazm-spec/: book.toml
nazm-spec/css/: language-nazm.css
nazm-spec/js/: change-titles.js  nazm.js
nazm-spec/src/: SUMMARY.md  booleans.md  comments.md  expressions.md  intro.md  keywords.md  numbers.md  punctuation.md  tokens.md
nazm-spec/src/expressions/: arrays_expressions.md  break_expressions.md  call_expressions.md  continue_expressions.md  fields_expressions.md  if_expressions.md  indexing_expressions.md  lambda_expressions.md  literal_expressions.md  (+7 more)
nazmc_ast/: Cargo.toml
nazmc_ast/src/: exprs.rs  item.rs  lib.rs  stms.rs  types.rs
nazmc_data_pool/: Cargo.toml
nazmc_data_pool/src/: lib.rs
nazmc_diagnostics/: Cargo.toml
nazmc_diagnostics/src/: error_codes.rs  file_info.rs  lib.rs  span.rs
nazmc_diagnostics_macros/: Cargo.toml
nazmc_diagnostics_macros/src/: lib.rs
nazmc_display_table/: Cargo.toml
nazmc_display_table/src/: lib.rs
nazmc_lexer/: Cargo.toml
nazmc_lexer/src/: error.rs  lib.rs  token.rs
nazmc_lower_nir/: Cargo.toml
nazmc_lower_nir/src/: errors.rs  lib.rs
nazmc_nir/: Cargo.toml
nazmc_nir/src/: exprs.rs  lib.rs  stms.rs  types.rs
nazmc_parse_derive/: Cargo.toml
nazmc_parse_derive/src/: lib.rs
nazmc_parser/: Cargo.toml
nazmc_parser/src/: ast.rs  ast_generator.rs  lib.rs  lower_to_ast.rs  parse_methods.rs  tokens_iter.rs
nazmc_parser/src/syntax/: item.rs  mod.rs  path.rs  punctuated.rs  stm.rs  terminal.rs  typ.rs
nazmc_parser/src/syntax/expr/: array.rs  control_flow.rs  lambda.rs  mod.rs
nazmc_resolve/: Cargo.toml
nazmc_resolve/src/: lib.rs
src/: cli.rs  main.rs
src/code_reporter/: mod.rs  painter.rs
src/diagnostics/: mod.rs  span.rs  ticket.rs
src/lexer/: cursor.rs  error.rs  mod.rs  token.rs
src/parser/: mod.rs  tokens_iter.rs
src/span/: mod.rs
(+48 files in other folders)
