[package]
name = "nazmc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bpaf = { version = "*", features = ["derive"] }
owo-colors = "*"
documented = "*"
strum = { version = "*", features = ["derive"] }
itertools = "*"
nazmc_diagnostics = { path = "nazmc_diagnostics" }
paste = "*"
nazmc_parse_derive = { path = "nazmc_parse_derive" }