[package]
name = "nazmc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bpaf = { version = "*", features = ["derive"] }
owo-colors = "*"
nazmc_display_table = { path = "nazmc_display_table" }
nazmc_parser = { path = "nazmc_parser" }
