[package]
name = "nazmc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bpaf = { version = "*", features = ["derive"] }
owo-colors = "*"
nazmc_data_pool = { path = "nazmc_data_pool" }
nazmc_lexer = { path = "nazmc_lexer" }
nazmc_parser = { path = "nazmc_parser" }
nazmc_diagnostics = { path = "nazmc_diagnostics" }
nazmc_nir = { path = "nazmc_nir" }
serde = { version = "*", features = ["derive"] }
serde_yaml = "*"
thin-vec = "*"
