[package]
name = "nazmc_lower_nir"
version = "0.1.0"
edition = "2021"

[dependencies]
nazmc_resolve = { path = "../nazmc_resolve" }
nazmc_nir = { path = "../nazmc_nir" }
nazmc_ast = { path = "../nazmc_ast" }
nazmc_data_pool = { path = "../nazmc_data_pool" }
nazmc_diagnostics = { path = "../nazmc_diagnostics" }
thin-vec = "*"
