[package]
name = "nazmc_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
nazmc_lexer = { path = "../nazmc_lexer" }
nazmc_diagnostics = { path = "../nazmc_diagnostics" }
nazmc_parse_derive = { path = "../nazmc_parse_derive" }
nazmc_data_pool = { path = "../nazmc_data_pool" }
paste = "*"
thin-vec = "*"
